--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -289,7 +289,7 @@ $title-color: #8D8888;
     align-items: center;
     height: 50px;
     padding-left: 5px;
-    background-color: #FAFAFA;
+    background-color: #F3F3F3;
     border-top: 1px solid rgba(0, 0, 0, 0.12);
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 
