--- a/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
@@ -1,55 +1,52 @@
-<div class="entity-view__card input-form" [class.entity-view__card--create]="mode === modes.Add">
-  <div class="entity-view__card__header">
-    <div *ngIf="mode !== modes.Add; else add">
-      <div class="entity-view__card__header__title">{{'EMAILTEMPLATE_INFO_TITLE' | translate}}</div>
-      <div class="entity-view__card__header__subtitle">{{'EMAILTEMPLATE_INFO_SUBTITLE' | translate}}</div>
-    </div>
-    <ng-template #add>
-      <div class="entity-view__card__header__title">{{'EMAILTEMPLATE_INFO_CREATETITLE' | translate}}</div>
-    </ng-template>
-    <ng-container *ngIf="mode !== modes.Add && editEnabled">
-      <mat-icon [matMenuTriggerFor]="editOptions">more_vert</mat-icon>
-      <mat-menu #editOptions="matMenu" x-position="before">
-        <button mat-menu-item (click)="changeMode.emit(modes.Update)">{{'EMAILTEMPLATE_INFO_EDIT' | translate}}</button>
-        <button mat-menu-item *ngIf="entity.smtpProvider && entity.smtpProvider.id" [routerLink]="['/smtpproviders', entity.smtpProvider.id]">{{'EMAILTEMPLATE_INFO_VIEWSMTPPROVIDER' | translate}}</button>
-      </mat-menu>
-    </ng-container>
+<div class="entity-view__card input-form" [class.entity-view__card--create]="mode === modes.Add" [class.entity-view__card--update]="mode === modes.Update">
+  <div class="entity-view__card__header" *ngIf="mode === modes.Add">
+    <div class="entity-view__card__header__title">{{'EMAILTEMPLATE_INFO_CREATETITLE' | translate}}</div>
   </div>
 
-  <form form #emailTemplateInput="ngForm" class="entity-view__card__content">
-    <mat-form-field [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item email-template-view__input">
-      <input auto-focus required matInput [disabled]="mode === modes.View" placeholder="{{'EMAILTEMPLATE_INFO_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
-    </mat-form-field>
+  <form form #emailTemplateInput="ngForm" class="entity-view__card__content" [class.entity-view__card__content--update]="mode === modes.Update">
 
-    <dropdown-component class="email-template-view__dropdown"
-                        [class.error]="formInvalid && !entity.type"
-                        [disabled]="mode === modes.View"
-                        [options]="types"
-                        [mapper]="typeMapper"
-                        [selected]="entity.type"
-                        [placeholder]="'EMAILTEMPLATE_INFO_TYPE' | translate"
-                        (onSelect)="entity.type = $event">
-    </dropdown-component>
+    <div class="flex-custom">
+      <mat-form-field [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item email-template-view__input">
+        <input auto-focus required matInput [disabled]="mode === modes.View" placeholder="{{'EMAILTEMPLATE_INFO_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
+      </mat-form-field>
 
-    <dropdown-component class="email-template-view__dropdown"
-                        *ngIf="smtpProviders.length"
-                        [class.error]="formInvalid && !entity.smtpProvider.id"
-                        [disabled]="mode === modes.View"
-                        [options]="smtpProviders"
-                        [mapper]="smtpProviderMapper"
-                        [selected]="entity.smtpProvider"
-                        [placeholder]="'EMAILTEMPLATE_INFO_SMTPPROVIDER' | translate"
-                        (onSelect)="entity.smtpProvider = $event">
-    </dropdown-component>
-    <div [routerLink]="['/smtpproviders']" class="text" *ngIf="!smtpProviders.length">You need to create an SMTP provider first.</div>
+      <mat-slide-toggle class="slider-blue" [(ngModel)]="entity.enabled" name="enabled"></mat-slide-toggle>
+    </div>
 
-    <mat-form-field [class.error]="formInvalid && !entity.subject" class="entity-view__card__content__item">
+    <div class="dropdown email-template-view__input" [class.error]="formInvalid && !entity.type">
+      <div class="placeholder">
+        {{entity.type ? 'Template Type *' : ''}}
+      </div>
+      <div class="content" [class.content--empty]="!entity.type" [matMenuTriggerFor]="typeOptions">
+        <span>{{mapper(entity.type) || 'Template Type *'}}</span>
+        <mat-icon>keyboard_arrow_down</mat-icon>
+      </div>
+      <mat-menu #typeOptions="matMenu" x-position="before">
+        <button mat-menu-item *ngFor="let type of types" (click)="entity.type = type">{{mapper(type)}}</button>
+      </mat-menu>
+    </div>
+
+    <div class="dropdown dropdown--last email-template-view__input" [class.error]="formInvalid && !entity.smtpProvider.name">
+      <div class="placeholder">
+        {{entity.smtpProvider.name ? 'SMTP Provider *' : ''}}
+      </div>
+      <div class="content" [class.content--empty]="!entity.smtpProvider.name" [matMenuTriggerFor]="providerOptions">
+        <span>{{entity.smtpProvider.name || 'SMTP Provider *'}}</span>
+        <mat-icon>keyboard_arrow_down</mat-icon>
+      </div>
+      <div [routerLink]="['/smtpproviders']" class="text" *ngIf="smtpProviders && (smtpProviders.length === 0)">You need to create an SMTP provider first.</div>
+      <mat-menu #providerOptions="matMenu" x-position="before">
+        <button mat-menu-item *ngFor="let provider of (smtpProviders || [])" (click)="entity.smtpProvider = provider">{{provider.name}}</button>
+      </mat-menu>
+    </div>
+
+    <mat-form-field [class.error]="formInvalid && !entity.subject">
       <input required matInput [disabled]="mode === modes.View" name="subject" placeholder="{{'EMAILTEMPLATE_INFO_SUBJECT' | translate}}" [(ngModel)]="entity.subject" type="text">
     </mat-form-field>
   </form>
 
-  <div *ngIf="mode !== modes.View" class="entity-view__card__actions">
-    <div (click)="cancelUpdate()">{{'EMAILTEMPLATE_INFO_CANCEL' | translate}}</div>
+  <div *ngIf="mode !== modes.View" class="entity-view__card__actions" [class.entity-view__card__actions--update]="mode === modes.Update">
+    <div *ngIf="mode !== modes.Update" (click)="cancelUpdate()">{{'EMAILTEMPLATE_INFO_CANCEL' | translate}}</div>
     <div (click)="saveEmailTemplate(emailTemplateInput.form.valid)">{{'EMAILTEMPLATE_INFO_SAVE' | translate}}</div>
   </div>
 </div>
