--- a/src/app/pages/email-templates-page/email-template-view/email-template-view.component.scss
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-view.component.scss
@@ -15,3 +15,24 @@ entity-view-entityacl {
   border: 2px solid rgba(255,255,255,0.4);
   background: #3D6EB3;
 }
+
+.grapes-wrapper {
+  position: relative;
+
+  .send-test-button {
+    position: absolute;
+    z-index: 5;
+    top: 10px;
+    left: 25px;
+    color: #ffffff;
+    background: #2C98F0;
+    padding: 0 16px;
+    height: 32px;
+    line-height: 32px;
+    font-size: 12px;
+
+    &--inactive {
+      background: #8FC5F2;
+    }
+  }
+}
