--- a/src/assets/scss/_mat-rewrites.scss
+++ b/src/assets/scss/_mat-rewrites.scss
@@ -145,3 +145,19 @@
 .material-icons--24 {
   font-size: 24px !important;
 }
+
+.mrw-input--no-padding {
+  .mat-form-field-infix {
+    border-top: none;
+  }
+
+  .mat-form-field-wrapper {
+    padding-bottom: 0 !important;
+  }
+}
+
+.mrw-input--no-line {
+  .mat-form-field-underline {
+    display: none;
+  }
+}
