Fix table preferences being cut of

--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -61,7 +61,7 @@ $title-color: #8D8888;
 
     &__content {
       margin-top: 60px;
-      overflow-x: auto;
+      overflow: visible;
     }
   }
 
