--- a/src/assets/scss/_mat-rewrites.scss
+++ b/src/assets/scss/_mat-rewrites.scss
@@ -94,7 +94,7 @@
 
   &--search-input {
     .mat-form-field-wrapper {
-      padding-bottom: 0;
+      padding-bottom: 0 !important;
     }
 
     .mat-form-field-infix {
