--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
@@ -3,7 +3,7 @@
 
       <div class="lowdata-container__header">
         <div class="greeting">
-          <div>{{'DASHBOARD_STATE_LOWDATA_GREETING' | translate}} {{name}}</div>
+          <div>Welcome back, {{name}}</div>
           <div class="total-revenue-text">{{'DASHBOARD_STATE_LOWDATA_TOTALREVENUE' | translate}}</div>
           <div class="total-revenue-amount">
             <div>$</div>
