Temporary remove entry points for email templates views

--- a/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-view.component.html
+++ b/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-view.component.html
@@ -16,9 +16,9 @@
 
     </mat-tab>
 
-    <mat-tab>
-      <smtp-provider-email-templates [smtpProvider]="entity"></smtp-provider-email-templates>
-    </mat-tab>
+    <!--<mat-tab>-->
+      <!--<smtp-provider-email-templates [smtpProvider]="entity"></smtp-provider-email-templates>-->
+    <!--</mat-tab>-->
 
     <mat-tab>
       <smtp-provider-validate [entity]="entity"></smtp-provider-validate>
