--- a/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
+++ b/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
@@ -85,6 +85,6 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="4" [cardsExpression]="'300px'" [title]="'CAMPAIGN_INDEX_TITLE' | translate"></spe-loader>
+  <spe-loader [numberOfTabs]="4" [cardsExpression]="'300px;450px;'" [title]="'CAMPAIGN_INDEX_TITLE' | translate"></spe-loader>
 </ng-template>
 
