Make email templates visible again

--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -44,21 +44,21 @@
         <product-schedule-campaigns [id]="entity.id"></product-schedule-campaigns>
       </mat-tab>
 
-      <!--<mat-tab>-->
+      <mat-tab>
 
-        <!--<table-memory-->
-                <!--class="campaign-view__email-templates"-->
-                <!--[data]="entity.emailTemplates"-->
-                <!--[columnParams]="emailTemplateColumnParams"-->
-                <!--[associateData]="emailTemplateService.entities$ | async"-->
-                <!--[textOptions]="emailText"-->
-                <!--[associateDataMapper]="emailTemplateMapper"-->
-                <!--(associate)="associateEmailTemplate($event)"-->
-                <!--(disassociate)="disassociateEmailTemplate($event)"-->
-                <!--(view)="viewEmailTemplate($event)">-->
-        <!--</table-memory>-->
+        <table-memory
+                class="campaign-view__email-templates"
+                [data]="entity.emailTemplates"
+                [columnParams]="emailTemplateColumnParams"
+                [associateData]="emailTemplateService.entities$ | async"
+                [textOptions]="emailText"
+                [associateDataMapper]="emailTemplateMapper"
+                (associate)="associateEmailTemplate($event)"
+                (disassociate)="disassociateEmailTemplate($event)"
+                (view)="viewEmailTemplate($event)">
+        </table-memory>
 
-      <!--</mat-tab>-->
+      </mat-tab>
 
     </mat-tab-group>
   </div>
