--- a/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
+++ b/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
@@ -16,18 +16,18 @@
                             (save)="updateCampaign(entity)">
           </campaign-add-new>
 
-          <!--<table-memory-->
-            <!--class="campaign-view__email-templates"-->
-            <!--[data]="entity.emailTemplates"-->
-            <!--[columnParams]="emailTemplateColumnParams"-->
-            <!--[associateData]="emailTemplateService.entities$ | async"-->
-            <!--[textOptions]="emailText"-->
-            <!--[associateDataMapper]="emailTemplateMapper"-->
-            <!--(associate)="associateEmailTemplate($event)"-->
-            <!--(disassociate)="disassociateEmailTemplate($event)"-->
-            <!--(view)="viewEmailTemplate($event)"-->
-            <!--[campaignHeader]="true">-->
-          <!--</table-memory>-->
+          <table-memory
+            class="campaign-view__email-templates"
+            [data]="entity.emailTemplates"
+            [columnParams]="emailTemplateColumnParams"
+            [associateData]="emailTemplateService.entities$ | async"
+            [textOptions]="emailText"
+            [associateDataMapper]="emailTemplateMapper"
+            (associate)="associateEmailTemplate($event)"
+            (disassociate)="disassociateEmailTemplate($event)"
+            (view)="viewEmailTemplate($event)"
+            [campaignHeader]="true">
+          </table-memory>
         </div>
 
       </mat-tab>
@@ -85,6 +85,6 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="4" [cardsExpression]="'300px;450px;'" [title]="'CAMPAIGN_INDEX_TITLE' | translate"></spe-loader>
+  <spe-loader [numberOfTabs]="4" [cardsExpression]="'300px;450px'" [title]="'CAMPAIGN_INDEX_TITLE' | translate"></spe-loader>
 </ng-template>
 
