--- a/src/app/pages/products-page/product-view/product-images/product-images.component.html
+++ b/src/app/pages/products-page/product-view/product-images/product-images.component.html
@@ -40,35 +40,7 @@
       <div class="entity-view__card__header__title">{{'PRODUCT_IMAGE_UPLOAD_TITLE' | translate}}</div>
     </div>
 
-    <div class="image-upload">
-      <div
-        class="dropzone"
-        ng2FileDrop
-        (fileOver)="fileOnDropzone($event)"
-        [class.dropzone--with-content]="filePreviewPath"
-        [class.dropzone--file-over]="onDropzone"
-        type="file"
-        [uploader]="uploader">
-        <ng-container *ngIf="!filePreviewPath; else preview">
-          <div class="dropzone__text">{{'PRODUCT_IMAGE_UPLOAD_DRAGDROP' | translate}}</div>
-          <label class="select">
-            <input type="file" ng2FileSelect [uploader]="uploader"/>
-            {{'PRODUCT_IMAGE_UPLOAD_SELECT' | translate}}
-          </label>
-        </ng-container>
-        <ng-template #preview>
-          <img [src]="filePreviewPath" class="image" [class.image--file-over]="onDropzone" style="width: 100%;"/>
-        </ng-template>
-
-        <div class="upload-spinner" *ngIf="uploadInProgress">
-          <mat-spinner></mat-spinner>
-        </div>
-      </div>
-    </div>
-
-    <div *ngIf="filePreviewPath" class="entity-view__card__actions">
-      <div (click)="uploadImage()">{{'PRODUCT_IMAGE_UPLOAD_UPLOAD' | translate}}</div>
-    </div>
+    <image-uploader (imageUploaded)="uploadImage($event)"></image-uploader>
   </div>
 
 </div>
