Disable adding of same providers to the same provider group

--- a/src/app/pages/merchant-provider-groups-page/merchant-provider-group-view/merchant-provider-group-view.component.html
+++ b/src/app/pages/merchant-provider-groups-page/merchant-provider-group-view/merchant-provider-group-view.component.html
@@ -42,7 +42,7 @@
                                 [class.error]="formInvalid && !providerToAdd.merchantProvider.id"
                                 [mapFunction]="merchantProviderMapper"
                                 [initialValue]="providerToAdd.merchantProvider"
-                                [options]="merchantProviderService.entities$ | async"
+                                [options]="merchantProviderService.entities$ | async | removeItems : (entity.merchantProviderConfigurations || []) : merchantProviderIdMapper : configurationIdMapper"
                                 [placeholder]="'MERCHANTPROVIDERGROUP_MERCHANT_MERCHANT' | translate"
                                 (selected)="providerToAdd.merchantProvider = $event">
             </autocomplete-input>
