--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
@@ -1,6 +1,6 @@
 <div  *ngIf="entity; else spinner" class="entity-view">
 
-  <blue-header [items]="breadcrumbs" [titleValue]="entity.name"></blue-header>
+  <blue-header [items]="breadcrumbs" [titleValue]="entity.name || entity.affiliateId"></blue-header>
 
   <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
